[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://textures/banner.png" type="Texture" id=2]
[ext_resource path="res://textures/point.png" type="Texture" id=3]
[ext_resource path="res://textures/target.png" type="Texture" id=4]
[ext_resource path="res://textures/power_under.tex" type="Texture" id=5]
[ext_resource path="res://textures/power_progress.png" type="Texture" id=6]
[ext_resource path="res://textures/arrow.png" type="Texture" id=7]
[ext_resource path="res://textures/gradient_line.png" type="Texture" id=8]
[ext_resource path="res://objects/player_ui.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/arial0.fnt" type="BitmapFont" id=10]
[ext_resource path="res://textures/personal_score_tag.tex" type="Texture" id=11]

[sub_resource type="Animation" id=2]

resource/name = "show_score"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("data_ui/total_score_tab:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("data_ui/total_score_tab/score:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("data_ui/total_score_tab/press:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "total_score"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("data_ui/total_score_tab:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 3, 3.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("data_ui/total_score_tab/score:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("data_ui/total_score_tab/press:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]

resource/name = "fire"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 4.4, 5.5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 410, 0 ), Vector2( 410, 0 ), Vector2( 0, 0 ) ]
}

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="game_field" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 150, 540 )

[node name="banner" type="Sprite" parent="game_field"]

transform/pos = Vector2( 1031.03, 0 )
transform/scale = Vector2( 1.81003, 1.6439 )
texture = ExtResource( 2 )
modulate = Color( 1, 1, 1, 0.436471 )

[node name="point" type="Sprite" parent="game_field"]

texture = ExtResource( 3 )

[node name="target" type="Sprite" parent="game_field"]

transform/pos = Vector2( 1356.8, 0 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
modulate = Color( 1, 1, 1, 0.281804 )

[node name="penguins" type="Node2D" parent="game_field"]

[node name="ui" type="Node2D" parent="."]

editor/display_folded = true

[node name="power" type="TextureProgress" parent="ui"]

visibility/opacity = 0.6
rect/rotation = 90.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = 662.0
margin/right = 550.0
margin/bottom = 745.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 5 )
texture/over = null
texture/progress = ExtResource( 6 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="pointer" type="Position2D" parent="ui"]

editor/display_folded = true
transform/pos = Vector2( 150, 540 )

[node name="arrow" type="Sprite" parent="ui/pointer"]

transform/pos = Vector2( 143.008, 0 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="flags" type="Node2D" parent="ui"]

transform/pos = Vector2( 150, 540 )

[node name="canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="data_ui" type="ReferenceFrame" parent="canvas"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0

[node name="top_line" type="Control" parent="canvas/data_ui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="gradient_line" type="Sprite" parent="canvas/data_ui/top_line"]

transform/pos = Vector2( 1325.16, 27.0334 )
transform/scale = Vector2( 1.6, 0.6 )
texture = ExtResource( 8 )
flip_v = true

[node name="bottom_line" type="Control" parent="canvas/data_ui"]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="gradient_line" type="Sprite" parent="canvas/data_ui/bottom_line"]

transform/pos = Vector2( 1325.16, -28.9667 )
transform/scale = Vector2( 1.6, 0.6 )
texture = ExtResource( 8 )

[node name="fire_button" type="Button" parent="canvas/data_ui"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = -27.0
margin/right = 1971.0
margin/bottom = 1103.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="player0" parent="canvas/data_ui" instance=ExtResource( 9 )]

margin/left = 20.0
margin/top = 16.0
margin/right = 60.0
margin/bottom = -24.0

[node name="player1" parent="canvas/data_ui" instance=ExtResource( 9 )]

anchor/left = 1
anchor/right = 1
margin/left = 20.0
margin/top = 16.0
margin/right = -20.0
margin/bottom = -24.0
layout = 1

[node name="player2" parent="canvas/data_ui" instance=ExtResource( 9 )]

anchor/left = 1
anchor/top = 0
anchor/right = 1
anchor/bottom = 0
margin/left = 20.0
margin/top = 16.0
margin/right = -20.0
margin/bottom = 56.0
layout = 2

[node name="player3" parent="canvas/data_ui" instance=ExtResource( 9 )]

anchor/top = 0
anchor/bottom = 0
margin/left = 20.0
margin/top = 16.0
margin/right = 60.0
margin/bottom = 56.0
layout = 3

[node name="total_score" type="Label" parent="canvas/data_ui"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 786.0
margin/top = 999.0
margin/right = 1366.0
margin/bottom = 1090.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.130325, 0.257945, 0.457031, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "0:0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="total_score_tab" type="Patch9Frame" parent="canvas/data_ui"]

editor/display_folded = true
visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = 232.0
margin/right = -312.0
margin/bottom = -40.0
texture = ExtResource( 11 )
modulate = Color( 1, 1, 1, 0.360667 )
patch_margin/left = 35
patch_margin/top = 35
patch_margin/right = 35
patch_margin/bottom = 35

[node name="label" type="Label" parent="canvas/data_ui/total_score_tab"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 623.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.601098 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "TOTAL SCORE:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="canvas/data_ui/total_score_tab"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 156.0
margin/right = 623.0
margin/bottom = 247.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.96875, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.601098 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "0:0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="press" type="Patch9Frame" parent="canvas/data_ui/total_score_tab"]

visibility/opacity = 0.0
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = -146.0
margin/right = -312.0
margin/bottom = -331.0
texture = ExtResource( 11 )
modulate = Color( 1, 1, 1, 0.196706 )
patch_margin/left = 35
patch_margin/top = 35
patch_margin/right = 35
patch_margin/bottom = 35

[node name="label" type="Label" parent="canvas/data_ui/total_score_tab/press"]

visibility/self_opacity = 0.8
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1041.0
margin/bottom = 308.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.130325, 0.257945, 0.457031, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "PRESS \"FIRE\"
TO START NEW GAME"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_anim" type="AnimationPlayer" parent="canvas"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show_score = SubResource( 2 )
anims/total_score = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="camera_position" type="Position2D" parent="."]

[node name="Camera" type="Camera2D" parent="camera_position"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="cam_anim" type="AnimationPlayer" parent="camera_position"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fire = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timers" type="Node2D" parent="."]

[connection signal="button_down" from="canvas/data_ui/fire_button" to="." method="_on_fire_button_button_down"]

[connection signal="finished" from="camera_position/cam_anim" to="." method="_on_cam_anim_finished"]


